# overlap_detection

./: .gitignore  Biovoltron  CMakeLists.txt  README.md
.cache/clangd/index/: anchor_map.hpp.DE70B95AEA61BA36.idx  config.hpp.515E6D661488BA2E.idx  detector.hpp.28807AA211F3EF0A.idx  file_io.hpp.7F8B7785348D4B6A.idx  main.cpp.67B7535639C1A4A4.idx  options.hpp.C6D8D28FA8668A3A.idx  reads_manip.hpp.E5501C927BD3FE10.idx  seed_masker.hpp.73C356405F4F45BE.idx  utils.hpp.B30E44A6D855C167.idx
exe_sh/: ecoli-devnet.sh  scere.sh  test.sh
exe_sh/human/: m13101_67.sh  prevMid42213.sh
include/: anchor_map.hpp  config.hpp  detector.hpp  file_io.hpp  hpc_marmot.hpp  old_detect.hpp  options.hpp  reads_manip.hpp  seed_masker.hpp  utils.hpp
src/: main.cpp
